Add inventory cursor pagination
